cmake_minimum_required(VERSION 3.22.1)

project(c-oberon VERSION 0.0.1 LANGUAGES C CXX)

set(CMAKE_EXPORT_COMPILE_COMMANDS ON)
set(CMAKE_C_STANDARD 99)
set(CMAKE_C_STANDARD_REQUIRED ON)
set(CMAKE_C_EXTENSIONS OFF)
set(CMAKE_CXX_STANDARD 11)
set(CMAKE_CXX_STANDARD_REQUIRED ON)
set(CMAKE_CXX_EXTENSIONS OFF)

include_directories(../src)

add_subdirectory(.. ../.c)

set(LESSON1 src/l-01/main.c)
set(LESSON2 src/l-02/main.c)
set(LESSON3 src/l-03/main.c)
set(LESSON4 src/l-04/main.c)
set(LESSON5 src/l-05/main.c)
set(LESSON6 src/l-06/main.c)
set(LESSON7 src/l-07/main.c)
set(LESSON8 src/l-08/main.c)
set(LESSON9 src/l-09/main.c)
set(LESSON10 src/l-10/main.c)
set(LESSON11 src/l-11/main.c)
set(LESSON12 src/l-12/main.c)
set(LESSON13 src/l-13/main.c)
set(LESSON14 src/l-14/main.c)
set(LESSON15 src/l-15/main.c)
set(LESSON16 src/l-16/main.c)
set(LESSON17 src/l-17/main.c)
set(LESSON18 src/l-18/main.c)
set(LESSON19 src/l-19/main.c)
set(LESSON20 src/l-20/main.c)
set(LESSON21 src/l-21/main.c)
set(LESSON22 src/l-22/main.c)
set(LESSON23 src/l-23/main.c)
set(LESSON24 src/l-24/main.c)
set(LESSON25 src/l-25/main.c)
set(LESSON26 src/l-26/main.c)
set(LESSON27 src/l-27/main.c)
set(LESSON28 src/l-28/main.c)
set(LESSON29 src/l-29/main.c)
set(LESSON30 src/l-30/main.c)
set(SIMPLEPARSER src/simple-parser/main.c)
set(CRC32 src/crc32/main.c)

add_executable(c-lesson-01 ${LESSON1})
add_executable(c-lesson-02 ${LESSON2})
add_executable(c-lesson-03 ${LESSON3})
add_executable(c-lesson-04 ${LESSON4})
add_executable(c-lesson-05 ${LESSON5})
add_executable(c-lesson-06 ${LESSON6})
add_executable(c-lesson-07 ${LESSON7})
add_executable(c-lesson-08 ${LESSON8})
add_executable(c-lesson-09 ${LESSON9})
add_executable(c-lesson-10 ${LESSON10})
add_executable(c-lesson-11 ${LESSON11})
add_executable(c-lesson-12 ${LESSON12})
add_executable(c-lesson-13 ${LESSON13})
add_executable(c-lesson-14 ${LESSON14})
add_executable(c-lesson-15 ${LESSON15})
add_executable(c-lesson-16 ${LESSON16})
add_executable(c-lesson-17 ${LESSON17})
add_executable(c-lesson-18 ${LESSON18})
add_executable(c-lesson-19 ${LESSON19})
add_executable(c-lesson-20 ${LESSON20})
add_executable(c-lesson-21 ${LESSON21})
add_executable(c-lesson-22 ${LESSON22})
add_executable(c-lesson-23 ${LESSON23})
add_executable(c-lesson-24 ${LESSON24})
add_executable(c-lesson-25 ${LESSON25})
add_executable(c-lesson-26 ${LESSON26})
add_executable(c-lesson-27 ${LESSON27})
add_executable(c-lesson-28 ${LESSON28})
add_executable(c-lesson-29 ${LESSON29})
add_executable(c-lesson-30 ${LESSON30})
add_executable(c-simple-parser ${SIMPLEPARSER})
add_executable(c-crc32 ${CRC32})
